# app/server/__init__.py
@@ -39,8 +39,9 @@ def create_app(test_config=None):
     
     app.logger.info("Registering blueprints")
 
-    from . import user, twitter
+    from . import user, twitter, propublica
     app.register_blueprint(user.bp, url_prefix='/user')
     app.register_blueprint(twitter.bp, url_prefix='/twitter')
+    app.register_blueprint(propublica.bp, url_prefix='/propublica')
 
     return app
